Simülasyon sınıfları eklendi

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -17,12 +17,13 @@
     <script type="text/javascript" src='../static/GatheringLocations.js'></script>
     <script type="text/javascript" src='../static/MapController.js'></script>
     <script type="text/javascript" src='../static/v3_epoly.js'></script>
+    <script type="text/javascript" src='../static/Simulation.js'></script>
 
     <!-- python'da çalışırken import edilme şekli.  
      <script type="text/javascript" src="{{ url_for('static', filename = 'GatheringLocations.js') }}"></script>
      <script type="text/javascript" src="{{ url_for('static', filename = 'MapController.js') }}"></script>
      <script type="text/javascript" src="{{ url_for('static', filename = 'v3_epoly.js') }}"></script>
-
+<script type="text/javascript" src="{{ url_for('static', filename = 'Simulation.js') }}"></script>
      -->
 
     <style>
