--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -12,18 +12,24 @@
 
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-lAxMUnPwYLTopC6QnZvF4TJClfztUEs"></script>
+    <link rel="stylesheet" type="text/css" href="../static/csshake.min.css">
+
 
     <!-- local'de çalışırken import edilme şekli.  -->
     <script type="text/javascript" src='../static/GatheringLocations.js'></script>
     <script type="text/javascript" src='../static/MapController.js'></script>
     <script type="text/javascript" src='../static/v3_epoly.js'></script>
     <script type="text/javascript" src='../static/Simulation.js'></script>
+    <script type="text/javascript" src='../static/Disaster.js'></script>
+    <script type="text/javascript" src='../static/Earthquake.js'></script>
 
     <!-- python'da çalışırken import edilme şekli.  
      <script type="text/javascript" src="{{ url_for('static', filename = 'GatheringLocations.js') }}"></script>
      <script type="text/javascript" src="{{ url_for('static', filename = 'MapController.js') }}"></script>
      <script type="text/javascript" src="{{ url_for('static', filename = 'v3_epoly.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename = 'Simulation.js') }}"></script>
+     <script type="text/javascript" src="{{ url_for('static', filename = 'Simulation.js') }}"></script>
+     <script type="text/javascript" src="{{ url_for('static', filename = 'Disaster.js') }}"></script>
+     <script type="text/javascript" src="{{ url_for('static', filename = 'Earthquake.js') }}"></script>
      -->
 
     <style>
@@ -60,12 +66,23 @@
 
                         var map = createMap();
 
+                        function createDisaster() {
+                            var e = document.getElementById("afetTipi");
+                            var disasterName = e.options[e.selectedIndex].value;
+                            if (disasterName == "Deprem") {
+                                createSimulation(new Earthquake());
+                            }
+
+                        }
+
+
                         //  Animasyon
                         var animStartPoint = { lat: 38.3820602, lng: 27.1795674 };
                         var animEndPoint = { lat: 38.3737857, lng: 27.1908057 };
                         initialize(map);
 
-                        function PlayAnimation(animPoint) {
+
+                        function playAnimation(animPoint) {
                             calcRoute(animStartPoint, animEndPoint);
                         }
 
@@ -78,35 +95,35 @@
             <!-- Map Controls -->
             <div class="col" style="background-color:slategrey; margin-right: 10px; border-radius: 2%; padding: 15px">
                 <h4>Manuel Doğal Afet Simülasyonu</h4>
-                <form>
-                    <div class="form-group">
-                        <label for="afetTipi">Afet Tipi</label>
-                        <select class="form-control" id="afetTipi">
-                            <option>Deprem</option>
-                            <option>Sel</option>
-                            {points}
-                            <option>Heyelan</option>
-                            <option>Yangın</option>
-                        </select>
 
-                    </div>
-                    <div class="form-group">
-                        <label>Koordinatlar</label>
-                        <input class="form-control" type="text" placeholder="X" id="koordinatX">
-                        <input class="form-control" type="text" placeholder="Y" id="koordinatY">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Oluştur</button>
-                </form>
+                <div class="form-group">
+                    <label for="afetTipi">Afet Tipi</label>
+                    <select class="form-control" id="afetTipi">
+                        <option>Deprem</option>
+                        <option>Sel</option>
+                        {points}
+                        <option>Heyelan</option>
+                        <option>Yangın</option>
+                    </select>
+
+                </div>
+                <div class="form-group">
+                    <label>Koordinatlar</label>
+                    <input class="form-control" type="text" placeholder="X" id="koordinatX">
+                    <input class="form-control" type="text" placeholder="Y" id="koordinatY">
+                </div>
+                <button type="submit" class="btn btn-primary" onclick="createDisaster()">Oluştur</button>
+
                 <br>
 
                 <div id="form-group">
                     <label>Start:</label>
-                    <input type="text" class="form-control" name="start" id="start" value="Uğur's home" />
+                    <input type="text" class="form-control" name="start" id="start" value="hasanağa" />
                     <label>End:</label>
-                    <input type="text" class="form-control" name="end" id="end" value="Efendi's home" />
+                    <input type="text" class="form-control" name="end" id="end" value="deu" />
                 </div>
                 <br>
-                <input type="submit" class="btn btn-primary" value="Oynat" onclick="PlayAnimation()" />
+                <input type="submit" class="btn btn-primary" value="Oynat" onclick="playAnimation()" />
 
                 <br>
                 <h4>Otomatik Doğal Afet Simülasyonu</h4>
