Deprem oluşturma ve Yardım gönderme eklendi

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -77,12 +77,14 @@
 
 
                         //  Animasyon
-                        var animStartPoint = { lat: 38.3820602, lng: 27.1795674 };
-                        var animEndPoint = { lat: 38.3737857, lng: 27.1908057 };
+                        //var animStartPoint = { lat: 38.3820602, lng: 27.1795674 };
+                        //var animEndPoint = { lat: 38.3737857, lng: 27.1908057 };
+
+
                         initialize(map);
 
 
-                        function playAnimation(animPoint) {
+                        function playAnimation() {
                             calcRoute(animStartPoint, animEndPoint);
                         }
 
