Depo noktaları eklendi

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src='../static/Simulation.js'></script>
     <script type="text/javascript" src='../static/Disaster.js'></script>
     <script type="text/javascript" src='../static/Earthquake.js'></script>
+    <script type="text/javascript" src='../static/StockLocations.js'></script>
 
     <!-- python'da çalışırken import edilme şekli.  
      <script type="text/javascript" src="{{ url_for('static', filename = 'GatheringLocations.js') }}"></script>
@@ -30,6 +31,7 @@
      <script type="text/javascript" src="{{ url_for('static', filename = 'Simulation.js') }}"></script>
      <script type="text/javascript" src="{{ url_for('static', filename = 'Disaster.js') }}"></script>
      <script type="text/javascript" src="{{ url_for('static', filename = 'Earthquake.js') }}"></script>
+     <script type="text/javascript" src="{{ url_for('static', filename = 'StockLocations.js') }}"></script>
      -->
 
     <style>
