Fay hatları ve rastgele fay seçimi eklendi.

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -122,9 +122,9 @@
 
                 <div id="form-group">
                     <label>Start:</label>
-                    <input type="text" class="form-control" name="start" id="start" value="hasanağa" />
+                    <input type="text" class="form-control" name="start" id="start" value="" />
                     <label>End:</label>
-                    <input type="text" class="form-control" name="end" id="end" value="deu" />
+                    <input type="text" class="form-control" name="end" id="end" value="" />
                 </div>
                 <br>
                 <input type="submit" class="btn btn-primary" value="Oynat" onclick="playAnimation()" />
